--- a/Cesium/package.json
+++ b/Cesium/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "gen": "NODE_OPTIONS=--max-old-space-size=10000 node convert.mjs"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   "homepage": "https://github.com/JoeThunyathep/NYC3D_CesiumJS#readme",
   "dependencies": {
     "cesium": "^1.68.0",
+    "citygml-to-3dtiles": "^0.1.2",
     "compression": "^1.7.4",
     "express": "^4.17.1"
   }
