--- a/web-app/package.json
+++ b/web-app/package.json
@@ -6,7 +6,8 @@
     "dev": "vite",
     "start": "vite --host",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint src/**/** --fix"
   },
   "dependencies": {
     "cesium": "^1.92.0",
@@ -19,7 +20,11 @@
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "@typescript-eslint/parser": "^5.27.1",
     "@vitejs/plugin-react": "^1.3.0",
+    "eslint": "^8.17.0",
+    "eslint-plugin-react": "^7.30.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.5",
     "vite-plugin-cesium": "^1.2.16"
