--- a/web-app/package.json
+++ b/web-app/package.json
@@ -7,7 +7,8 @@
     "start": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint src/**/** --fix"
+    "lint": "eslint src/**/** --fix",
+    "preprocess": "node scripts/preprocessor.mjs"
   },
   "dependencies": {
     "cesium": "^1.92.0",
@@ -15,6 +16,7 @@
     "react": "^18.0.0",
     "react-chartjs-2": "^4.1.0",
     "react-dom": "^18.0.0",
+    "react-select": "^5.3.2",
     "resium": "^1.14.3"
   },
   "devDependencies": {
