--- a/web-app/package.json
+++ b/web-app/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "start": "vite --host",
+    "start": "vite --host --port 443",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "npx eslint --config .eslintrc.json --fix src/**/*",
